Refactor CoursesPage with private helpers and clean up test suite
- CoursesPage: extract getVisibleCourseTitles() and getVisibleEnrollButtons()
  private helpers to avoid duplicating the filtered findElements() stream;
  swap Collectors.toList() for Stream.toList()
- CoursesPageTest: remove TC2 (courseCountTest) which was fully covered by TC3
  (courseNamesTest); replace TC7 Udemy redirect loop (9 page loads) with a
  single smoke test following the first enroll link

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>